Finished Function, just before local var

--- a/BasicPython.ipynb
+++ b/BasicPython.ipynb
@@ -2190,7 +2190,7 @@
    "source": [
     "## Application\n",
     "\n",
-    "For this demonstration, we shall use the **flanker task data** from OpenNeuro.org. You can download [here](https://openneuro.org/datasets/ds000102/versions/00001/download). You unzip the zip file and place it in your data directory. *Don't forget to mount the data directory on your Docker!* I recommend mapping it to **`/tmp/Data`** on your Docker image so that you can follow my notes.\n",
+    "For this demonstration, we shall use the **flanker task data** from OpenNeuro.org. You can download [here](https://openneuro.org/datasets/ds000102/versions/00001/download). I recommend creating a data directory named **`Data`** on your local computer, and under it creating a directory named **`ds102`** (i.e., `Data/ds102`). Just a side note, this data set used to be referred as `ds102` in OpenfMRI.org, the precursor of OpenNeuro.org. Then move the downloaded zip file to the `ds102` directory and unzip its contents. *Don't forget to mount the `Data` directory on your Docker!* \n",
     "\n",
     "First, let's examine the content of this data set."
    ]
@@ -2203,7 +2203,7 @@
    "source": [
     "import os\n",
     "\n",
-    "dataDir = '/tmp/Data'\n",
+    "dataDir = '/tmp/Data/ds102'\n",
     "listDirContents = os.listdir(dataDir)"
    ]
   },
@@ -2216,7 +2216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -2225,7 +2225,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['CHANGES', 'dataset_description.json', 'derivatives', 'participants.tsv', 'README', 'sub-01', 'sub-02', 'sub-03', 'sub-04', 'sub-05', 'sub-06', 'sub-07', 'sub-08', 'sub-09', 'sub-10', 'sub-11', 'sub-12', 'sub-13', 'sub-14', 'sub-15', 'sub-16', 'sub-17', 'sub-18', 'sub-19', 'sub-20', 'sub-21', 'sub-22', 'sub-23', 'sub-24', 'sub-25', 'sub-26', 'T1w.json', 'task-flanker_bold.json']\n"
+      "['sub-07', 'task-flanker_bold.json', 'sub-23', 'sub-09', 'sub-10', 'sub-12', 'sub-04', 'ds000102-00001.zip', 'sub-14', 'T1w.json', 'sub-22', 'sub-24', 'dataset_description.json', 'sub-11', 'sub-26', 'sub-17', 'sub-20', 'sub-05', 'derivatives', 'sub-16', 'sub-02', 'sub-01', 'sub-18', 'sub-15', 'sub-08', 'sub-21', 'sub-06', 'sub-19', 'participants.tsv', 'README', 'sub-25', 'sub-03', 'sub-13', 'CHANGES']\n"
      ]
     }
    ],
@@ -2242,7 +2242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2261,14 +2261,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['sub-01', 'sub-02', 'sub-03', 'sub-04', 'sub-05', 'sub-06', 'sub-07', 'sub-08', 'sub-09', 'sub-10', 'sub-11', 'sub-12', 'sub-13', 'sub-14', 'sub-15', 'sub-16', 'sub-17', 'sub-18', 'sub-19', 'sub-20', 'sub-21', 'sub-22', 'sub-23', 'sub-24', 'sub-25', 'sub-26']\n"
+      "['sub-07', 'sub-23', 'sub-09', 'sub-10', 'sub-12', 'sub-04', 'sub-14', 'sub-22', 'sub-24', 'sub-11', 'sub-26', 'sub-17', 'sub-20', 'sub-05', 'sub-16', 'sub-02', 'sub-01', 'sub-18', 'sub-15', 'sub-08', 'sub-21', 'sub-06', 'sub-19', 'sub-25', 'sub-03', 'sub-13']\n"
      ]
     }
    ],
@@ -2285,7 +2285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2294,14 +2294,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['sub-01', 'sub-02', 'sub-03', 'sub-04', 'sub-05', 'sub-06', 'sub-07', 'sub-08', 'sub-09', 'sub-10', 'sub-11', 'sub-12', 'sub-13', 'sub-14', 'sub-15', 'sub-16', 'sub-17', 'sub-18', 'sub-19', 'sub-20', 'sub-21', 'sub-22', 'sub-23', 'sub-24', 'sub-25', 'sub-26']\n"
+      "['sub-07', 'sub-23', 'sub-09', 'sub-10', 'sub-12', 'sub-04', 'sub-14', 'sub-22', 'sub-24', 'sub-11', 'sub-26', 'sub-17', 'sub-20', 'sub-05', 'sub-16', 'sub-02', 'sub-01', 'sub-18', 'sub-15', 'sub-08', 'sub-21', 'sub-06', 'sub-19', 'sub-25', 'sub-03', 'sub-13']\n"
      ]
     }
    ],
@@ -2328,30 +2328,30 @@
     "## What is a function?\n",
     "In math and computer science, functions are often referred as black boxes. This is because, when an input is given, a function performs a certain operation (perhaps unbeknownst to the user) and returns an output.\n",
     "\n",
-    "<img src=\"https://github.com/sathayas/JupyterfMRIFall2018/blob/master/Images/function_schematic.png?raw=true\" alt=\"Function schematic\" style=\"width: 250px; float: center;\"/>\n",
+    "<img src=\"https://github.com/sathayas/JupyterfMRIFall2019/blob/master/Images/function_schematic.png?raw=true\" alt=\"Function schematic\" style=\"width: 250px; float: center;\"/>\n",
     "\n",
     "Think about some mathematical functions, such as `cos`, `log`, or `exp`. There are a number of functions that have already written (by someone else) in various libraries in Python. To run such a function, you need to import the library, then call the function. For example, let's import a random number generator function called **`randint()`** in the library **`random`**."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n",
-      "5\n",
       "1\n",
+      "8\n",
+      "5\n",
       "9\n",
+      "4\n",
       "7\n",
-      "7\n",
-      "7\n",
+      "4\n",
       "9\n",
-      "2\n",
-      "7\n"
+      "9\n",
+      "10\n"
      ]
     }
    ],
@@ -2372,7 +2372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2390,7 +2390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2406,8 +2406,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Just FYI, `%4.1f` indicates that the number is converted to a float (thus `f`) occupying 4 spaces with 1 decimal place (thus `4.1`). We can also create a table by calling this function multiple times."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2447,9 +2454,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise\n",
-    "1. **Truncating a string**. Write a function that takes a string as the input. This function evaluate the length of the input string, and if it is longer than 5 characters, it returns only the first 5 characters of the input. Otherwise, the entire input string is returned.\n",
-    "\n",
+    "Note that `\\t` is a special character for a TAB. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Local variables\n",
     "Variables defined inside a function are only available inside the function. You cannot use those variables later outside the function. For example,"
    ]
@@ -2601,6 +2612,14 @@
    "metadata": {},
    "source": [
     "This notation means that you are calling the function **`print_randint()`** under the library **`PrintRandom`**. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Saving your code as a file\n",
+    "<hr style=\"height:1px;border:none\" />\n"
    ]
   },
   {
