All sections are done; outline removed

--- a/BasicPython.ipynb
+++ b/BasicPython.ipynb
@@ -24,26 +24,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Outline\n",
-    "\n",
-    "**In this tutorial:**\n",
-    "* Basic unix commands\n",
-    "* Operators (number & string)\n",
-    "* Variables & lists\n",
-    "* Flow control (if, while)\n",
-    "* For loop\n",
-    "* Dictionary\n",
-    "\n",
-    "**In the next tutorial:**\n",
-    "* Arrays\n",
-    "* Data frame\n",
-    "* NIfTI format"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Essential Unix commands\n",
     "<hr style=\"height:1px;border:none\" />\n",
     "\n",
@@ -2335,7 +2315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -2343,15 +2323,15 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "8\n",
-      "5\n",
-      "9\n",
-      "4\n",
       "7\n",
       "4\n",
+      "7\n",
+      "2\n",
+      "1\n",
+      "2\n",
       "9\n",
-      "9\n",
-      "10\n"
+      "2\n",
+      "9\n"
      ]
     }
    ],
@@ -2372,7 +2352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2390,7 +2370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2409,12 +2389,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Just FYI, `%4.1f` indicates that the number is converted to a float (thus `f`) occupying 4 spaces with 1 decimal place (thus `4.1`). We can also create a table by calling this function multiple times."
+    "Just FYI, `%4.1f` indicates that a number is converted to a float (thus `f`) occupying 4 spaces with 1 decimal place (thus `4.1`). We can also create a table by calling this function multiple times."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2539,98 +2519,6 @@
     "Notice that the variable **`finalScore`** used inside the function is different from the variable **`fianlScore`** defined earlier. Variables inside a function are referred as **local variables**, and they exist only while the function is executed.\n",
     "\n",
     "As you saw in the example, you can name a local variable the same name as another variable outside the function. However, this may cause a confusion later, so I recommend not to do that."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Calling a function you have written before\n",
-    "\n",
-    "If you have previously written a function to do something before, then you can use that function in another program. In other words, you don't have to re-write the function. Say you have a program called **`PrintRandom.py`**, and in it, there is a function called **`print_randint`**.\n",
-    "```python\n",
-    "import random\n",
-    "\n",
-    "def print_randint(nInt):\n",
-    "    for i in range(nInt):\n",
-    "        print(random.randint(0,9), end='')\n",
-    "    print()\n",
-    "```\n",
-    "This function take an integer as an input. Then it prints out a series of random digits of the length specified by the input. Say, you have this function under the **`functions`** directory under your current directory. (This is true for those running the Jupyter notebook version of this document). Then you can call this function by"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "36534\n"
-     ]
-    }
-   ],
-   "source": [
-    "import sys\n",
-    "sys.path.append('functions')\n",
-    "\n",
-    "from PrintRandom import print_randint\n",
-    "print_randint(5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The first two lines of codes are needed to add the directory **`function`** into **`sys.path`**, a list of directories where Python looks for functions to be run.\n",
-    "\n",
-    "You can also call the function as:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "26458587\n"
-     ]
-    }
-   ],
-   "source": [
-    "import PrintRandom\n",
-    "PrintRandom.print_randint(8)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This notation means that you are calling the function **`print_randint()`** under the library **`PrintRandom`**. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Saving your code as a file\n",
-    "<hr style=\"height:1px;border:none\" />\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# For more details...\n",
-    "<hr style=\"height:1px;border:none\" />\n",
-    "\n",
-    "If you would like to learn more on Python coding, you can take a look at the notes from my [Intro Python coding class](https://github.com/sathayas/JupyterPythonFall2017/blob/master/README.md).\n",
-    "\n"
    ]
   }
  ],
