--- a/HandlingData.ipynb
+++ b/HandlingData.ipynb
@@ -35,8 +35,12 @@
     "\n",
     "**In this tutorial:**\n",
     "* Dictionary & JSON file\n",
-    "* Arrays\n",
     "* Data frame\n",
+    "  * Reading CSV\n",
+    "  * Slicing, indexing\n",
+    "  * Updating\n",
+    "* Arrays\n",
+    "  * Slicing & indexing\n",
     "* NIfTI format"
    ]
   },
@@ -461,7 +465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
