Up to loading a data frame from a file

--- a/HandlingData.ipynb
+++ b/HandlingData.ipynb
@@ -300,55 +300,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's print out the content of this file, verbatim."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "\t\"RepetitionTime\": 2.0,\n",
-      "\t\"TaskName\": \"Flanker\",\n",
-      "\t\"TaskDescription\": \"On each trial (inter-trial interval (ITI) varied between 8 s and 14 s; mean ITI=12 s),participants used one of two buttons on a response pad to indicate the direction of a central arrow in an array of 5 arrows. In congruent trials the flanking arrows pointed in the same direction as the central arrow (e.g., < < < < <), while in more demanding incongruent trials the flanking arrows pointed in the opposite direction (e.g., < < > < <). Subjects performed two 5-minute blocks, each containing 12 congruent and 12 incongruent trials, presented in a pseudorandom order.\",\n",
-      "\t\"CogAtlasID\": \"tsk_4a57abb949a4f\",\n",
-      "\t\"Manufacturer\": \"Siemens\",\n",
-      "\t\"ManufacturerModelName\": \"Allegra\",\n",
-      "\t\"MagneticFieldStrength\": 3.0,\n",
-      "\t\"ScanningSequence\": \"Echo Planar\",\n",
-      "\t\"MRAcquisitionType\": \"2D\",\n",
-      "\t\"EchoTime\": 0.030,\n",
-      "\t\"FlipAngle\": 80.0\n",
-      "}\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "f = open(fJSON,'r')\n",
-    "fContents = f.read()\n",
-    "print(fContents)\n",
-    "f.close()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "The file contains the following:\n",
+    "\n",
+    "```\n",
+    "{\n",
+    "\t\"RepetitionTime\": 2.0,\n",
+    "\t\"TaskName\": \"Flanker\",\n",
+    "\t\"TaskDescription\": \"On each trial (inter-trial interval (ITI) varied between 8 s and 14 s; mean ITI=12 s),participants used one of two buttons on a response pad to indicate the direction of a central arrow in an array of 5 arrows. In congruent trials the flanking arrows pointed in the same direction as the central arrow (e.g., < < < < <), while in more demanding incongruent trials the flanking arrows pointed in the opposite direction (e.g., < < > < <). Subjects performed two 5-minute blocks, each containing 12 congruent and 12 incongruent trials, presented in a pseudorandom order.\",\n",
+    "\t\"CogAtlasID\": \"tsk_4a57abb949a4f\",\n",
+    "\t\"Manufacturer\": \"Siemens\",\n",
+    "\t\"ManufacturerModelName\": \"Allegra\",\n",
+    "\t\"MagneticFieldStrength\": 3.0,\n",
+    "\t\"ScanningSequence\": \"Echo Planar\",\n",
+    "\t\"MRAcquisitionType\": \"2D\",\n",
+    "\t\"EchoTime\": 0.030,\n",
+    "\t\"FlipAngle\": 80.0\n",
+    "}\n",
+    "```\n",
+    "\n",
     "As you can see, there are different keys (`RepetitionTime`, `TaskName`, ..., `FlipAngle`) and the values associated with them.\n",
     "\n",
-    "\n",
-    "*If you are interested in how this code works ...*\n",
-    "\n",
-    "*This codes open the JSON file (with the **`open`** function) and creates a file object **`f`**. Then it reads the contents of the file with the **`read()`** method associated with `f` and stores everything into a variable **`fContents`**. The code prints out the file contents, and closes the file object `f` with the **`.close()`** method.*\n",
-    "\n",
-    "\n",
-    "You probably want to read this file as a dictionary object, so we use the **`load()`** function under the **`json`** library."
+    "To read this file as a dictionary object, we use the **`load()`** function under the **`json`** library."
    ]
   },
   {
@@ -442,11 +414,307 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data frames\n",
+    "<hr style=\"height:1px;border:none\" />\n",
+    "\n",
+    "Say, you have some data in the form of a table. For example, the file **`participants.tsv`** under the `ds102` directory contains the following information.\n",
+    "\n",
+    "```\n",
+    "participant_id\tgender\tage\n",
+    "sub-01\tF\t21.94\n",
+    "sub-02\tM\t22.79\n",
+    "sub-03\tM\t19.65\n",
+    "sub-04\tM\t25.98\n",
+    "sub-05\tM\t23.24\n",
+    "sub-06\tM\t23.27\n",
+    "sub-07\tD\t34.72\n",
+    "sub-08\tD\t22.22\n",
+    "...\n",
+    "```\n",
+    "\n",
+    "Here, columns represent different variables (`participant_id`, `gender`, and `age`), whereas rows represent different individuals / observations (`sub-01`, `sub-02`, and so on). We can handle this collection of information as a single **data frame** object. A Python library **Pandas** has a collection of utilities for data frames. So let's read this data as a data frame object."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[`<LoadTable.py>`](https://github.com/sathayas/fMRIClassFall2019/blob/master/HandlingData/LoadTable.py)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that **`pandas`** library is imported with a short-hand notation **`pd`**. This becomes handy, as you do not have to type `pandas` every time you want to use functions in this library!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data directory & file\n",
+    "dataDir = '/tmp/Data/ds102'\n",
+    "fileTable = os.path.join(dataDir,'participants.tsv')\n",
+    "\n",
+    "# Loading the data file as a data frame object\n",
+    "ptData = pd.read_csv(fileTable, sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The function **`read_csv`** reads the data table from a file (as specified in the variable `fileTable`). This function is designed for csv (comma-separated values) file format; since values are separated by tabs (or `\\t`s), we need to specify a parameter **`set='\\t'`**).\n",
+    "\n",
+    "Here is what has been read from the file:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>participant_id</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>sub-01</td>\n",
+       "      <td>F</td>\n",
+       "      <td>21.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>sub-02</td>\n",
+       "      <td>M</td>\n",
+       "      <td>22.79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>sub-03</td>\n",
+       "      <td>M</td>\n",
+       "      <td>19.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>sub-04</td>\n",
+       "      <td>M</td>\n",
+       "      <td>25.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>sub-05</td>\n",
+       "      <td>M</td>\n",
+       "      <td>23.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>sub-06</td>\n",
+       "      <td>M</td>\n",
+       "      <td>23.27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>sub-07</td>\n",
+       "      <td>D</td>\n",
+       "      <td>34.72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>sub-08</td>\n",
+       "      <td>D</td>\n",
+       "      <td>22.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>sub-09</td>\n",
+       "      <td>M</td>\n",
+       "      <td>22.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>sub-10</td>\n",
+       "      <td>D</td>\n",
+       "      <td>25.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>sub-11</td>\n",
+       "      <td>M</td>\n",
+       "      <td>21.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>sub-12</td>\n",
+       "      <td>D</td>\n",
+       "      <td>26.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>sub-13</td>\n",
+       "      <td>M</td>\n",
+       "      <td>25.72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>sub-14</td>\n",
+       "      <td>M</td>\n",
+       "      <td>49.79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>sub-15</td>\n",
+       "      <td>D</td>\n",
+       "      <td>34.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>sub-16</td>\n",
+       "      <td>M</td>\n",
+       "      <td>49.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>sub-17</td>\n",
+       "      <td>D</td>\n",
+       "      <td>35.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>sub-18</td>\n",
+       "      <td>D</td>\n",
+       "      <td>24.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>sub-19</td>\n",
+       "      <td>D</td>\n",
+       "      <td>24.67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>sub-20</td>\n",
+       "      <td>M</td>\n",
+       "      <td>34.19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>sub-21</td>\n",
+       "      <td>M</td>\n",
+       "      <td>26.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>sub-22</td>\n",
+       "      <td>D</td>\n",
+       "      <td>27.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>sub-23</td>\n",
+       "      <td>M</td>\n",
+       "      <td>22.79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>sub-24</td>\n",
+       "      <td>M</td>\n",
+       "      <td>27.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>sub-25</td>\n",
+       "      <td>M</td>\n",
+       "      <td>34.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>sub-26</td>\n",
+       "      <td>M</td>\n",
+       "      <td>32.16</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   participant_id gender    age\n",
+       "0          sub-01      F  21.94\n",
+       "1          sub-02      M  22.79\n",
+       "2          sub-03      M  19.65\n",
+       "3          sub-04      M  25.98\n",
+       "4          sub-05      M  23.24\n",
+       "5          sub-06      M  23.27\n",
+       "6          sub-07      D  34.72\n",
+       "7          sub-08      D  22.22\n",
+       "8          sub-09      M  22.70\n",
+       "9          sub-10      D  25.24\n",
+       "10         sub-11      M  21.80\n",
+       "11         sub-12      D  26.00\n",
+       "12         sub-13      M  25.72\n",
+       "13         sub-14      M  49.79\n",
+       "14         sub-15      D  34.06\n",
+       "15         sub-16      M  49.03\n",
+       "16         sub-17      D  35.77\n",
+       "17         sub-18      D  24.03\n",
+       "18         sub-19      D  24.67\n",
+       "19         sub-20      M  34.19\n",
+       "20         sub-21      M  26.22\n",
+       "21         sub-22      D  27.00\n",
+       "22         sub-23      M  22.79\n",
+       "23         sub-24      M  27.24\n",
+       "24         sub-25      M  34.56\n",
+       "25         sub-26      M  32.16"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ptData"
+   ]
   }
  ],
  "metadata": {
@@ -465,7 +733,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
